# RAG-Based-Medical-Assistant

./: .gitignore  README.md
backend/: api.py  connect_memory_with_llm.py  create_memory_for_llm.py  medibot.py  pyproject.toml
backend/vectorstore/chroma_db/46edddc8-23a4-4764-9a4f-81f429f60105/: index_metadata.pickle
